able to hard code in computer pattern

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
             <h1 class="center-align">2</h1>
           </div>
         </div>
-        <div class="row">
+        <div class="row valign-wrapper">
           <div id="3" class="col s4 offset-s1 green">
             <h1 class="center-align">3</h1>
           </div>
-          <div class="col s2 "></div>
+          <div class="col s2">
+            <a id="start-btn" class="waves-effect waves-light btn valign purple">START</a>
+          </div>
           <div id="4" class="col s4 yellow">
             <h1 class="center-align">4</h1>
           </div>
