added empty recordUser var for future use, changed body backgroun to blue-grey darker-3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script defer src="game-logic/game-logic.js"></script>
     <script defer src="gui/gui.js"></script>
   </head>
-  <body>
+  <body class="blue-grey darken-3">
     <div class="container">
       <div class="game-gui">
         <div class="row">
