changed colors and made keys more user-friendly

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <div class="container">
       <div class="game-gui">
         <div class="row">
-          <div id="1" class="col s4 offset-s2 red">
-            <h1 class="center-align">1</h1>
+          <div id="1" class="col s4 offset-s2 red darken-4">
+            <h1 class="center-align">W</h1>
           </div>
-          <div id="2" class="col s4 blue">
-            <h1 class="center-align">2</h1>
+          <div id="2" class="col s4 blue darken-4">
+            <h1 class="center-align">E</h1>
           </div>
         </div>
         <div class="row valign-wrapper">
-          <div id="3" class="col s4 offset-s1 green">
-            <h1 class="center-align">3</h1>
+          <div id="3" class="col s4 offset-s1 green darken-4">
+            <h1 class="center-align">A</h1>
           </div>
           <div class="col s4">
             <a id="start-btn" class="waves-effect waves-light btn valign purple">START</a>
           </div>
-          <div id="4" class="col s4 yellow">
-            <h1 class="center-align">4</h1>
+          <div id="4" class="col s4 yellow darken-2">
+            <h1 class="center-align">S</h1>
           </div>
         </div>
         <div class="row">
-          <div id="5" class="col s4 offset-s4 orange">
-            <h1 class="center-align">5</h1>
+          <div id="5" class="col s4 offset-s4 orange darken-4">
+            <h1 class="center-align">D</h1>
           </div>
         </div>
       </div>
