rearranged click boxes, added #hint-btn

--- a/index.html
+++ b/index.html
@@ -16,27 +16,28 @@
     <div class="container">
       <div class="game-gui">
         <div class="row">
-          <div id="1" class="col s4 offset-s2 red">
+          <div id="1" class="col s2 offset-s1 red">
             <h1 class="center-align">W</h1>
           </div>
-          <div id="2" class="col s4 blue">
+          <div id="2" class="col s2 blue">
             <h1 class="center-align">E</h1>
           </div>
-        </div>
-        <div class="row valign-wrapper">
-          <div id="3" class="col s4 offset-s1 green">
+          <div id="3" class="col s2 green">
             <h1 class="center-align">A</h1>
           </div>
-          <div class="col s4">
-            <a id="start-btn" class="waves-effect waves-light btn valign purple">START</a>
-          </div>
-          <div id="4" class="col s4 yellow">
+          <div id="4" class="col s2 yellow">
             <h1 class="center-align">D</h1>
+          </div>
+          <div id="5" class="col s2 orange">
+            <h1 class="center-align">S</h1>
           </div>
         </div>
         <div class="row">
-          <div id="5" class="col s4 offset-s4 orange">
-            <h1 class="center-align">S</h1>
+          <div class="col s2 offset-s4">
+            <a id="start-btn" class="waves-effect waves-light btn-large purple">start</a>
+          </div>
+          <div class="col s2">
+            <a id="hint-btn" class="waves-effect waves-light btn green">( hint )</a>
           </div>
         </div>
       </div>
