--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
       <div class="game-gui">
         <div class="row">
           <div id="1" class="col s2 offset-s1 red">
-            <h1 class="center-align">W</h1>
-          </div>
-          <div id="2" class="col s2 blue">
-            <h1 class="center-align">E</h1>
-          </div>
-          <div id="3" class="col s2 green">
             <h1 class="center-align">A</h1>
           </div>
-          <div id="4" class="col s2 yellow">
+          <div id="2" class="col s2 blue">
+            <h1 class="center-align">S</h1>
+          </div>
+          <div id="3" class="col s2 green">
             <h1 class="center-align">D</h1>
           </div>
+          <div id="4" class="col s2 yellow">
+            <h1 class="center-align">F</h1>
+          </div>
           <div id="5" class="col s2 orange">
-            <h1 class="center-align">S</h1>
+            <h1 class="center-align">G</h1>
           </div>
         </div>
         <div class="row">
