--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
         <div class="row">
           <div class="col s2 offset-s4">
-            <a id="start-btn" class="waves-effect waves-light btn-large purple">start</a>
+            <a id="start-btn" class="waves-effect waves-light btn-large purple scale-transition">start</a>
           </div>
-          <div class="col s2">
-            <a id="hint-btn" class="waves-effect waves-light btn green">( hint )</a>
+          <div class="col s2 hint">
+            <a id="hint-btn" class="waves-effect waves-light btn green scale-transition scale-out">hints left: 2</a>
           </div>
         </div>
       </div>
