refactored start and hint buttons. hint-btn now hides until after you hit the start button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </div>
         <div class="row">
           <div class="col s3 offset-s4">
-            <a id="start-btn" class="waves-effect waves-light btn-large purple scale-transition">start</a>
+            <a id="start-btn" class="waves-effect waves-light btn-large purple scale-transition scale-in">start</a>
+            <a id="loser-btn" class="waves-effect waves-light btn-large red scale-transition scale-out">YOU LOSE</a>
           </div>
           <div class="col s3 hint">
             <a id="hint-btn" class="waves-effect waves-light btn green scale-transition scale-out">hints left: 2</a>
