added basic audio functionality

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <script defer src="apis/apis.js"></script>
     <script defer src="game-logic/game-logic.js"></script>
     <script defer src="gui/gui.js"></script>
+    <script defer src="gui/audio.js"></script>
   </head>
   <body class="blue-grey darken-3">
+    <audio id="c1" src="assets/audio/c-tone.mp3"></audio>
+    <audio id="e1" src="assets/audio/e-tone.mp3"></audio>
+    <audio id="g1" src="assets/audio/g-tone.mp3"></audio>
+    <audio id="b1" src="assets/audio/b-tone.mp3"></audio>
+    <audio id="c8" src="assets/audio/c8-tone.mp3"></audio>
     <div class="container">
       <div class="game-gui">
         <div class="row">
