--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <audio id="c8" src="assets/audio/c8-tone.mp3"></audio>
     <div class="container">
       <div class="game-gui">
-        <div class="row">
+        <div class="row unselectable">
           <div id="1" class="col s2 offset-s1 red">
             <h1 class="center-align">A</h1>
           </div>
