--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s3 offset-s4">
+          <div class="col s2 offset-s1">
+            <div class="card cyan darken-4 horizontal z-depth-5 center-align">
+              <div class="card-content white-text center-align">
+                <p>Top Score: <br /> <span id="top-score">level 7</span></p>
+              </div>
+            </div>
+          </div>
+          <div class="col s3">
             <a id="start-btn" class="waves-effect waves-light btn-large purple scale-transition scale-in">start</a>
             <a id="loser-btn" class="waves-effect waves-light btn-large red scale-transition scale-out">YOU LOSE</a>
           </div>
