added working high score box that is only temp-stored, fixed bug with Hints

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <audio id="b1" src="assets/audio/b-tone.mp3"></audio>
     <audio id="c8" src="assets/audio/c8-tone.mp3"></audio>
     <div class="container">
-      <div class="game-gui">
-        <div class="row unselectable">
+      <div class="game-gui unselectable">
+        <div class="row">
           <div id="1" class="col s2 offset-s1 red">
             <h1 class="center-align">A</h1>
           </div>
@@ -40,18 +40,18 @@
         </div>
         <div class="row">
           <div class="col s2 offset-s1">
-            <div class="card cyan darken-4 horizontal z-depth-5 center-align">
+            <div class="card cyan darken-4 horizontal z-depth-5 center-align scale-transition scale-out user-score">
               <div class="card-content white-text center-align">
-                <p>Top Score: <br /> <span id="top-score">level 7</span></p>
+                <p>Top Score: <br /> <span id="top-score">level 1</span></p>
               </div>
             </div>
           </div>
           <div class="col s3">
-            <a id="start-btn" class="waves-effect waves-light btn-large purple scale-transition scale-in">start</a>
-            <a id="loser-btn" class="waves-effect waves-light btn-large red scale-transition scale-out">YOU LOSE</a>
+            <a id="start-btn" class="waves-effect waves-light btn-large green scale-transition scale-in">start</a>
           </div>
           <div class="col s3 hint">
-            <a id="hint-btn" class="waves-effect waves-light btn green scale-transition scale-out">hints left: 2</a>
+            <a id="hint-btn" class="waves-effect waves-light btn purple scale-transition scale-out">hints left: 2</a>
+            <a id="loser-btn" class="waves-effect waves-light btn-large red scale-transition scale-out">YOU LOSE</a>
           </div>
         </div>
       </div>
