--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="assets/style.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-    <script defer src="apis/apis.js"></script>
-    <script defer src="game-logic/game-logic.js"></script>
-    <script defer src="gui/gui.js"></script>
-    <script defer src="gui/audio.js"></script>
+    <script defer src="scripts/apis.js"></script>
+    <script defer src="scripts/game-logic.js"></script>
+    <script defer src="scripts/gui.js"></script>
+    <script defer src="scripts/audio.js"></script>
   </head>
   <body class="blue-grey darken-3">
     <audio id="c1" src="assets/audio/c-tone.mp3"></audio>
