changed GUI to respond to QWERT key strokes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     <script defer src="scripts/game-logic.js"></script>
-    <script defer src="scripts/apis.js"></script>
+    <script defer  src="scripts/apis.js"></script>
     <script defer src="scripts/audio.js"></script>
     <script defer src="scripts/gui.js"></script>
   </head>
@@ -23,19 +23,19 @@
       <div class="game-gui unselectable">
         <div class="row">
           <div id="1" class="col s2 offset-s1 red">
-            <h1 class="center-align">A</h1>
+            <h1 class="center-align">Q</h1>
           </div>
           <div id="2" class="col s2 orange">
-            <h1 class="center-align">S</h1>
+            <h1 class="center-align">W</h1>
           </div>
           <div id="3" class="col s2 green">
-            <h1 class="center-align">D</h1>
+            <h1 class="center-align">E</h1>
           </div>
           <div id="4" class="col s2 yellow">
-            <h1 class="center-align">F</h1>
+            <h1 class="center-align">R</h1>
           </div>
           <div id="5" class="col s2 blue">
-            <h1 class="center-align">G</h1>
+            <h1 class="center-align">T</h1>
           </div>
         </div>
         <div class="row">
