added clear-pattern button, both playback and clear buttons become enabled once user enters a pattern

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <div class="col s3">
               <a id="playback-btn" class="waves-effect waves-light btn blue scale-transition scale-in disabled">start playback</a>
             </div>
+            <div class="col s3">
+              <a id="clear-btn" class="waves-effect waves-light btn deep-orange scale-transition scale-in disabled">clear pattern</a>
+            </div>
           </div>
         </form>
       <div class="game-gui unselectable">
