added range finder with no functionality

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <input type="checkbox" class="filled-in" id="user-record"/>
                 <label for="user-record">Record Arm</label>
               </p>
+              <p class="range-field">
+                <input type="range" id="test5" min="0" max="100" />
+              </p>
             <div class="col s3">
               <a id="playback-btn" class="waves-effect waves-light btn blue scale-transition scale-in disabled">start playback</a>
             </div>
